feature : ai interview implement done(except recording)