@@ -49,6 +49,7 @@ public class InterviewServiceImpl implements InterviewService {
     private final UserChatroomRepository userChatroomRepository;
     private final ChatroomRepository chatroomRepository;
     private final ChatRepository chatRepository;
+    private final InterviewTimeRepository interviewTimeRepository;
 
     private final RabbitMqService rabbitMqService;
 
@@ -71,6 +72,14 @@ public class InterviewServiceImpl implements InterviewService {
             // 인터뷰 다음 분기로 바꾸기
             InterviewEntity interview = interviewOpt.get();
             InterviewStatus nextStatus = InterviewUtil.nextPhase(interview.getRound(), interview.getPhase(), interview.getIsAiInterview());
+            if(!interview.getIsAiInterview() && nextStatus.getPhase().getPhase().equals("progress")){
+                InterviewTimeEntity interviewTime = InterviewTimeEntity.builder()
+                        .endAt(Timestamp.valueOf(LocalDateTime.now().plusMinutes(20)))
+                        .build();
+
+                interviewTime.setInterview(interview);
+                interview.setInterviewTime(interviewTime);
+            }
             interview.setPhase(nextStatus.getPhase());
             interview.setRound(nextStatus.getRound());
 
@@ -93,7 +102,7 @@ public class InterviewServiceImpl implements InterviewService {
 
     @Override
     @Transactional
-    public InterviewStatusDto getInterviewStatus() {
+    public Object getInterviewStatus() {
 
         // 유저 정보 -> 인터뷰 정보 가져오기
         UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
@@ -108,11 +117,11 @@ public class InterviewServiceImpl implements InterviewService {
                     .stream()
                     .filter(i -> !i.getUser().getId().equals(user.getId()))
                     .findFirst()
-                    .orElseThrow(() -> new RuntimeException("상대 유저를 찾을 수 없습니다."));
+                    .orElseThrow(UserNotFoundException::new);
             UserEntity partnerEntity = partnerParticipant.getUser();
 
-            // 남은 시간 계산
-            int timeRemain = TimeUtil.getRemainTime(interview.getPhaseAt(), InterviewStatus.builder().round(interview.getRound()).phase(interview.getPhase()).build());
+            Optional<InterviewTimeEntity> interviewTime = interviewTimeRepository.findByInterview(interview);
+            Integer timeRemain = interviewTime.map(interviewTimeEntity -> TimeUtil.getRemainTime(interviewTimeEntity.getEndAt())).orElse(null);
 
             // 내가 현재 인터뷰어인지 확인
             boolean isInterviewer = InterviewUtil.checkInterviewer(interviewParticipant.getRole(), interview.getRound());
@@ -132,13 +141,9 @@ public class InterviewServiceImpl implements InterviewService {
             List<String> questionOptions = null;
             if (interview.getPhase().equals(Phase.PROGRESS)) {
                 Optional<QuestionHistoryEntity> questionHistory = questionHistoryRepository.findByInterview(interview);
-                Optional<QuestionOptionsEntity> questionOption = questionOptionsRepository.findTop1ByInterviewOrderByCreatedAtDesc(interview);
-                if (questionOption.isPresent()) {
-                    questionOptions = new ArrayList<>();
-                    questionOptions.add(questionOption.get().getFirstOption());
-                    questionOptions.add(questionOption.get().getSecondOption());
-                    questionOptions.add(questionOption.get().getThirdOption());
-                    questionOptions.add(questionOption.get().getFourthOption());
+                List<QuestionOptionsEntity> questionOption = questionOptionsRepository.findTop4ByInterviewOrderByCreatedAtDesc(interview);
+                if (!questionOption.isEmpty()) {
+                    questionOptions = new ArrayList<>(questionOption.stream().map(QuestionOptionsEntity::getOption).toList());
                 }
                 questionIdx = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestionIdx() : -1;
                 selectedQuestion = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
@@ -152,46 +157,41 @@ public class InterviewServiceImpl implements InterviewService {
                     .currentRound(interview.getRound())
                     .currentPhase(interview.getPhase().getPhase())
                     .isInterviewer(isInterviewer)
-                    .isAiInterview(interview.getIsAiInterview())
+                    .isAiInterview(false)
                     .partner(partner)
                     .questionIdx(questionIdx)
                     .selectedQuestion(selectedQuestion)
                     .questionOption(questionOptions)
                     .build();
 
-        } else {
+        }
+        // AI Interview
+        else {
             int questionIdx = -1;
-            String selectedQuestion = "";
-            List<String> questionOptions = null;
+            String question = "";
+            Optional<InterviewTimeEntity> interviewTime = interviewTimeRepository.findByInterview(interview);
+            Integer timeRemain = interviewTime.map(interviewTimeEntity -> TimeUtil.getRemainTime(interviewTimeEntity.getEndAt())).orElse(null);
+
             if (interview.getPhase().equals(Phase.PROGRESS)) {
                 Optional<QuestionHistoryEntity> questionHistory = questionHistoryRepository.findByInterview(interview);
-                Optional<QuestionOptionsEntity> questionOption = questionOptionsRepository.findTop1ByInterviewOrderByCreatedAtDesc(interview);
-                if (questionOption.isPresent()) {
-                    questionOptions = new ArrayList<>();
-                    questionOptions.add(questionOption.get().getFirstOption());
-                    questionOptions.add(questionOption.get().getSecondOption());
-                    questionOptions.add(questionOption.get().getThirdOption());
-                    questionOptions.add(questionOption.get().getFourthOption());
-                }
                 questionIdx = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestionIdx() : -1;
-                selectedQuestion = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
+                question = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
             }
 
-            return InterviewStatusDto.builder()
-                    .interviewId(String.valueOf(interview.getId()))
-                    .currentRound(interview.getRound())
+            return AiInterviewInfoDto.builder()
+                    .InterviewId(String.valueOf(interview.getId()))
                     .currentPhase(interview.getPhase().getPhase())
-                    .isAiInterview(interview.getIsAiInterview())
+                    .isAiInterview(true)
+                    .question(question)
                     .questionIdx(questionIdx)
-                    .selectedQuestion(selectedQuestion)
-                    .questionOption(questionOptions)
+                    .timeRemain(timeRemain)
                     .build();
         }
     }
 
     @Override
     @Transactional
-    public QuestionCreationResponseDto makeQuestion(String interviewId, QuestionCreationRequestDto dto) {
+    public Object makeQuestion(String interviewId, QuestionCreationRequestDto dto) {
         log.info("*******Make Question 로그********");
         log.info(dto.toString());
 
@@ -218,6 +218,33 @@ public class InterviewServiceImpl implements InterviewService {
                         .findRandomMatchingQuestions(jobInterests, techStacks).stream()
                         .map(MainQuestionEntity::getContents)
                         .toList();
+
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
+
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
+
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
+                        .build();
             } else {
 
                 // 다른 참가자 추출하기(면접관이 아닌 면접자와 관련된 기술스택, 희망직무)
@@ -241,22 +268,15 @@ public class InterviewServiceImpl implements InterviewService {
                         .map(MainQuestionEntity::getContents)
                         .toList();
 
-
             }
 
             // questionOptions 저장하기
-            QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                    .firstOption(questions.get(0))
-                    .secondOption(questions.get(1))
-                    .thirdOption(questions.get(2))
-                    .fourthOption(questions.get(3))
-                    .interview(interview)
-                    .build();
-
-            questionOptions.setInterview(interview); // 연관관계 주인 설정
-            interview.getQuestionOptionsList().add(questionOptions); // 양방향 연관관계 동기화
-            questionOptionsRepository.save(questionOptions); // 주인 저장
-
+            questions.forEach(q -> {
+                QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                questionOption.setInterview(interview);
+                interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                questionOptionsRepository.save(questionOption);
+            });
 
             // question responsebody
             return QuestionCreationResponseDto.builder()
@@ -266,24 +286,15 @@ public class InterviewServiceImpl implements InterviewService {
             // 2. QuestionHistory가 있으면서 이전 Question이 똑같음 -> 꼬리질문 재생성한거임 -> passed Question 넣어서 AI에 보내기. + passed Question 누적
             if (interview.getQuestionHistory() != null && dto.getQuestion().equals(interview.getQuestionHistory().getSelectedQuestion())) {
                 // 최근 20개를 가져와서 passed question 구성하기
-                List<String> passedQuestions = questionOptionsRepository.findTop5ByOrderByCreatedAtDesc()
+                List<String> passedQuestions = questionOptionsRepository.findTop20ByOrderByCreatedAtDesc()
                         .stream()
-                        .flatMap(q -> Stream.of(
-                                q.getFirstOption(),
-                                q.getSecondOption(),
-                                q.getThirdOption(),
-                                q.getFourthOption()
-                        ))
-                        .collect(Collectors.toList());
-
-                String selectedQuestion = interview.getQuestionHistory().getSelectedQuestion();
-
-                String keyword = dto.getKeywords();
+                        .map(QuestionOptionsEntity::getOption)
+                        .toList();
 
                 FollowUpQuestionRequest request = FollowUpQuestionRequest.builder()
                         .interviewId(interviewId)
-                        .selectedQuestion(selectedQuestion)
-                        .keyword(keyword)
+                        .selectedQuestion(dto.getQuestion())
+                        .keyword(dto.getKeywords())
                         .passedQuestions(passedQuestions.isEmpty() ? null : passedQuestions)
                         .build();
 
@@ -306,25 +317,48 @@ public class InterviewServiceImpl implements InterviewService {
 
 
                 FollowUpQuestionResponseDto response = rabbitMqService.sendFollowUpBlocking(request);
-
-
                 List<String> questions = response.getFollowupQuestions();
 
-                QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                        .firstOption(questions.get(0))
-                        .secondOption(questions.get(1))
-                        .thirdOption(questions.get(2))
-                        .fourthOption(questions.get(3))
-                        .interview(interview)
-                        .build();
+                if(!interview.getIsAiInterview()){
+                    // questionOptions 저장하기
+                    questions.forEach(q -> {
+                        QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                        questionOption.setInterview(interview);
+                        interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                        questionOptionsRepository.save(questionOption);
+                    });
 
+                    return QuestionCreationResponseDto.builder()
+                            .questions(questions)
+                            .build();
+                }
 
-                questionOptionsRepository.save(questionOptions);
+                // ai라면 생성과 동시에 history에 저장해야함. -> select가 분리되어 있지 않기때문
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
 
-                log.info("✅ 꼬리질문 저장 완료: {}", questionOptions);
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
 
-                return QuestionCreationResponseDto.builder()
-                        .questions(questions)
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
                         .build();
             }
 
@@ -334,7 +368,7 @@ public class InterviewServiceImpl implements InterviewService {
                 // 꼬리 질문 요청용 DTO 생성
                 FollowUpQuestionRequest requestDto = FollowUpQuestionRequest.builder()
                         .interviewId(interviewId)
-                        .selectedQuestion(interview.getQuestionHistory().getSelectedQuestion())
+                        .selectedQuestion(dto.getQuestion())
                         .keyword(dto.getKeywords())
                         .build();
 
@@ -359,21 +393,45 @@ public class InterviewServiceImpl implements InterviewService {
 
                 List<String> questions = response.getFollowupQuestions();
 
-                QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                        .firstOption(questions.get(0))
-                        .secondOption(questions.get(1))
-                        .thirdOption(questions.get(2))
-                        .fourthOption(questions.get(3))
-                        .interview(interview)
-                        .build();
+                if(!interview.getIsAiInterview()){
+                    // questionOptions 저장하기
+                    questions.forEach(q -> {
+                        QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                        questionOption.setInterview(interview);
+                        interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                    });
 
+                    return QuestionCreationResponseDto.builder()
+                            .questions(questions)
+                            .build();
+                }
 
-                questionOptionsRepository.save(questionOptions);
+                // ai라면 생성과 동시에 history에 저장해야함. -> select가 분리되어 있지 않기때문
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
 
-                log.info("✅ 꼬리질문 저장 완료: {}", questionOptions);
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
 
-                return QuestionCreationResponseDto.builder()
-                        .questions(questions)
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
                         .build();
             }
         }
@@ -385,19 +443,12 @@ public class InterviewServiceImpl implements InterviewService {
 
         InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
                 .orElseThrow(InterviewNotFoundException::new);
-        QuestionOptionsEntity questionOptions = questionOptionsRepository.findTop1ByInterviewOrderByCreatedAtDesc(interview)
-                .orElseThrow(QuestionOptionNotFoundException::new);
+        List<QuestionOptionsEntity> questionOptions = questionOptionsRepository.findTop4ByInterviewOrderByCreatedAtDesc(interview);
         UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
                 .orElseThrow(InvalidTokenException::new);
 
         // 선택한 질문 골라내기
-        String selectedQuestion = switch (dto.getSelectedIdx()) {
-            case 1 -> questionOptions.getFirstOption();
-            case 2 -> questionOptions.getSecondOption();
-            case 3 -> questionOptions.getThirdOption();
-            case 4 -> questionOptions.getFourthOption();
-            default -> throw new IllegalArgumentException("선택 인덱스는 1~4 사이여야 합니다.");
-        };
+        String selectedQuestion = questionOptions.get(dto.getSelectedIdx()).getOption();
 
         // 질문 History 덮어쓰기
         Optional<QuestionHistoryEntity> oldQuestionHistoryOpt = questionHistoryRepository.findByInterview(interview);
@@ -521,5 +572,30 @@ public class InterviewServiceImpl implements InterviewService {
         return AiInterviewResponseDto.builder()
                 .interviewId(String.valueOf(interviewId))
                 .build();
+    }
+
+    @Override
+    @Transactional
+    public void initializeInterviewTime(String interviewId, TimeInitializeRequestDto dto) {
+        InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
+                .orElseThrow(InterviewNotFoundException::new);
+
+        InterviewTimeEntity interviewTime = InterviewTimeEntity.builder()
+                .endAt(Timestamp.valueOf(LocalDateTime.now().plusMinutes(dto.getTime())))
+                .interview(interview)
+                .build();
+
+        interview.setInterviewTime(interviewTime);
+
+        interviewTimeRepository.save(interviewTime);
+    }
+
+    @Override
+    @Transactional
+    public void exitInterview(String interviewId) {
+        InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
+                .orElseThrow(InterviewNotFoundException::new);
+
+        interviewRepository.delete(interview);
     }
 }
